--- a/PersonalTracking.WPF/Views/DepartmentList.xaml
+++ b/PersonalTracking.WPF/Views/DepartmentList.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:vm="clr-namespace:PersonalTracking.WPF.ViewModels"
              xmlns:local="clr-namespace:PersonalTracking.WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" FontSize="18" FontWeight="Bold">
-    <Grid>
+    <Grid d:DataContext="{d:DesignInstance Type=vm:DepartmentViewModel}">
         <!-- Grid Row and Column Definitions -->
         <Grid.RowDefinitions>
             <RowDefinition Height="6*" />
@@ -24,7 +25,7 @@
         <Button Margin="40 5" Name="btnDelete" Content="Delete" Grid.Column="2" FontSize="18" FontWeight="Bold"/>
         </Grid>
         <!-- Data Grid Department List Info -->
-        <DataGrid x:Name="gridDepartment" IsReadOnly="True" AutoGenerateColumns="False" SelectionUnit="FullRow">
+        <DataGrid x:Name="gridDepartment" IsReadOnly="True" AutoGenerateColumns="False" SelectionUnit="FullRow" ItemsSource="{Binding Path=Departments}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Width="*" Binding="{Binding Id}" Visibility="Hidden"/>
                 <DataGridTextColumn Header="Department Name" Width="auto" Binding="{Binding DepartmentName}"/>
