--- a/PersonalTracking.WPF/Windows/DepartmentDetailPage.xaml
+++ b/PersonalTracking.WPF/Windows/DepartmentDetailPage.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonalTracking.WPF"
+        xmlns:vm="clr-namespace:PersonalTracking.WPF.ViewModels"
         mc:Ignorable="d"
         Title="Create New Department"
         Icon="/Images/Department.png"
@@ -12,8 +13,8 @@
         FontSize="18"
         FontWeight="Bold"
         Background="#FF8EAFF7" Height="200" Width="350">
-    
-    <Grid>
+
+    <Grid d:DataContext="{d:DesignInstance Type=vm:DepartmentViewModel}">
         <!-- Grid Definitions -->
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -25,8 +26,8 @@
         </Grid.RowDefinitions>
         <!-- Add Department Form -->
         <Label Content="Department Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtDepartmentName" Grid.Column="1" Width="160" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" />
-        <Button x:Name="btnSave" Content="Save" Grid.Row="1" Width="100" Margin="50 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnSave_Click" />
+        <TextBox x:Name="txtDepartmentName" Grid.Column="1" Width="160" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding Path=Department.DepartmentName, Mode=TwoWay}" />
+        <Button x:Name="btnSave" Content="Save" Grid.Row="1" Width="100" Margin="50 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding Path=SaveCommand}" />
         <Button x:Name="btnClose" Content="Close" Grid.Column="1" Grid.Row="1" Width="100" Margin="0 0 50 0 " HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnClose_Click" />
 
     </Grid>
