--- a/PersonalTracking.WPF/Windows/AddDepartmentPage.xaml
+++ b/PersonalTracking.WPF/Windows/AddDepartmentPage.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PersonalTracking.WPF.DepartmentPage"
+﻿<Window x:Class="PersonalTracking.WPF.AddDepartmentPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -27,7 +27,7 @@
         <!-- Add Department Form -->
         <Label Content="Department Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBox x:Name="txtDepartmentName" Grid.Column="1" Width="160" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding Path=Department.DepartmentName, Mode=TwoWay}" />
-        <Button x:Name="btnSave" Content="Save" Grid.Row="1" Width="100" Margin="50 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding Path=SaveCommand}" />
+        <Button Content="Save" Grid.Row="1" Width="100" Margin="50 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding Path=SaveCommand}" />
         <Button x:Name="btnClose" Content="Close" Grid.Column="1" Grid.Row="1" Width="100" Margin="0 0 50 0 " HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnClose_Click" />
 
     </Grid>
